--- a/_public/index.html
+++ b/_public/index.html
@@ -1,6 +1,8 @@
 <html>
   <h2>
-    If you are seeing this message, you have probably started the express server application from the wrong directory.<br/><br/>
-    Change to the server directory and restart the application
+    If you are seeing this message, you have probably tried to access the root url in development.<br/><br/>
+
+    The root url <code>(http://localhost)</code> is reserved for the React Application in Production mode. It is not available when running the Express server alone.
+
   </h2>
 </html>
